@@ -1,3 +1,7 @@
+2016-06-24  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gfortran.dg/pr71642.f90: New test.
+
 2016-06-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/71647
